--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <h1>Shakiru's Porfolio </h1>
     <h2><strong>I am a Web Developer</strong></h2>
     <hr>
-    <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html"><h2>Movies Ranking Project</h2></a>
+    <a href="./public/movie-ranking.html"><h2>Movies Ranking Project</h2></a>
     
-    <img src="../4.3 HTML Porfolio Project/assets/images/new_bestmovies_rank.png" alt="Movies Ranking website">
+    <img src="./assets/images/new_bestmovies_rank.png" alt="Movies Ranking website">
 
-    <a href="../4.3 HTML Porfolio Project/public/birthday-invite.html"><h2>BirthDay Invite</h2></a>
-    <img src="../4.3 HTML Porfolio Project/assets/images/BirthDay_invite.png" alt="Birth Invite Website"><br>
-    <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact Me</a>
-    <a href="../4.3 HTML Porfolio Project/public/about.html">About Me</a>
+    <a href="./public/birthday-invite.html"><h2>BirthDay Invite</h2></a>
+    <img src="./assets/images/BirthDay_invite.png" alt="Birth Invite Website"><br>
+    <a href="./public/contact.html">Contact Me</a>
+    <a href="./public/about.html">About</a>
 </body>
 </html>
 
